--- a/design/style.css
+++ b/design/style.css
@@ -9,11 +9,11 @@ body{
 .container{
     width: 100%;
     height: auto;
-    position: relative;
 }
 .navbar {
-    width: 100%;
+    width: 90%;
     background-color: #000;
+    padding: 0 5%;
     height: 4rem;
     display: flex;
     justify-content: space-between;
@@ -43,7 +43,8 @@ body{
 
 .container2{
     margin-top: 4rem;
-    width: 100%;    
+    width: 90%;  
+    margin: auto;  
 }
 
 .slide-show {
@@ -77,3 +78,86 @@ body{
     width: 50%;
 }
 
+.slide-bottom {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.slide-info {
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+.experience {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+}
+.exp-content{
+    width: 55%;
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+}
+.exp-img{
+    width: 40%;
+    img{
+        width: 100%;
+        border-radius: 1rem;
+    }
+}
+
+.about-exp {
+    display: flex;
+    justify-content: space-between;
+    gap: 4rem;
+}
+.about-img{
+    width: 40%;
+    img{
+        width: 100%;
+    }
+}
+
+.prog-exp {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.services-cont{
+    display: flex;
+    flex-direction: column;
+    
+}
+.service-row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.services {
+    display: flex;
+    justify-content: space-around;
+    gap: 4rem;
+}
+
+.service {
+    border: 1px solid #fff;
+    border-radius: 1rem;
+    padding: 1rem;
+}
+
+
+.achievement {
+    display: flex;
+}
+
+.achiv-activity {
+    margin-block: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
