--- a/design/style.css
+++ b/design/style.css
@@ -7,6 +7,20 @@
     width: 100%;
     height: auto;
 }
+h1{
+    font-size: 5rem;
+}
+
+h2 {
+    margin-top: 1rem;
+    font-size: 2.5rem;
+}
+h4{
+    font-size: 2rem;
+}
+section {
+    margin-block: 2rem;
+}
 .navbar {
     width: 90%;
     background-color: #fff;
@@ -23,19 +37,21 @@
 .logo-img {
     width: 100%;
     img{
-        width: 64px;
+        width: 100px;
     };
 }
 .links{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    gap: 1rem;
     list-style-type: none;
-
     a {
         text-decoration-line: none;
         color: #000;
+        padding: 1rem;
+        &hover{
+            color: blue;
+        }
     }
 }
 
@@ -97,33 +113,94 @@
     border-radius: 1rem;
     position: absolute;
     bottom: 0;
-    background: linear-gradient(to top, #0000ff82, #ffffff75);
+    background: linear-gradient(to top, #0000ff96, #ffffff75, #ffffff00);
+
 }
+
 .slider-head {
+    width: 90%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    left: 5%;
+    top: 10%;
+    color: #fff;
 }
-
 
 .heading {
-    width: 50%;
+    width: 65%;
     text-align: justify;
     line-height: 1.5;
+    text-shadow: 0px 1px 10px black;
+    padding-block: 2rem;
+    button {
+        padding: 0.75rem;
+        border-radius: 2rem;
+        margin-top: 2rem;
+        border: none;
+        font-size: 1.5rem;
+    }
+    p{
+        font-size: 1.4rem;
+    }
+    span {
+        margin-left: 1rem;
+        font-size: 1.5rem;
+    }
 }
 .social-link {
-    width: 50%;
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotate(-90deg);
+    position: relative;
+    font-size: 2rem;    
+}
+
+.fb{
+    color: blue;
+}
+.ig{
+    color: red;
+}
+.tw{
+    color: #000;
+}
+.social-icon {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    list-style-type: none;
+    margin-inline: 1rem;
+    a {
+        color: #fff;
+    }
+
 }
 
 .slide-bottom {
     display: flex;
     flex-direction: column;
     text-align: center;
+    margin-block: 2rem;
+    background-color: #efefefc9;
+    padding-block: 3rem;
+    border-radius: 1rem;
 }
+
 .slide-info {
-    display: flex;
+    margin-top: 2rem;
+    display: flex;    
     justify-content: space-evenly;
     list-style-type: none;
+    font-size: 1.4rem;
+    font-weight: 700;
+
+    li{
+        margin-inline: 3rem;
+    }
 }
 
 .experience {
@@ -136,25 +213,31 @@
     width: 55%;
     display: flex;
     flex-direction: column;
-    gap: 4rem;
+    gap: 3rem;
 }
-.exp-img{
-    width: 30%;
+.about-exp {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.about-img{
+    width: 100%;
     img{
-        width: 100%;
+        width: 70%;
         border-radius: 1rem;
     }
 }
 
-.about-exp {
-    display: flex;
-    justify-content: space-between;
-    gap: 4rem;
-}
-.about-img{
-    width: 40%;
-    img{
-        width: 100%;
+.about-info {
+    
+    button {
+        padding: 0.75rem;
+        border-radius: 2rem;
+        margin-top: 2rem;
+        background-color: blue;
+        color: #fff;
+        border: none;
     }
 }
 
@@ -162,6 +245,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.exp-img{
+    width: 35%;
+    img{
+        width: 100%;
+        border-radius: 1rem;
+    }
 }
 
 .services-cont{
@@ -173,18 +264,30 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 2rem;
+}
+
+.service-head , .service-about {
+    width: 50%;
 }
 
 .services {
+    margin-block: 1rem;
     display: flex;
     justify-content: space-around;
-    gap: 4rem;
+    gap: 2rem;
 }
 
 .service {
-    border: 1px solid #fff;
+    border: 1px solid blue;
     border-radius: 1rem;
-    padding: 1rem;
+    padding: 2rem 1rem;
+    line-height: 1.5;
+}
+.service:hover{
+    background-color: blue;
+    color: #fff;
+
 }
 
 
