--- a/design/style.css
+++ b/design/style.css
@@ -26,7 +26,7 @@ h6{
 }
 
 section {
-  margin-block: 10rem;
+  margin-block: 4rem;
 }
 .box-headline {
   color: blue;
@@ -60,9 +60,11 @@ section {
   a {
     text-decoration-line: none;
     color: #000;
-    padding: 1rem;
-    &hover {
-      color: blue;
+    padding: 0.5rem 1.5rem;
+    border-radius: 1rem;
+    &:hover {
+      background-color: blue;
+      color: #fff;
     }
   }
 }
@@ -82,6 +84,7 @@ section {
   width: 100%;
   position: relative;
   overflow: hidden;
+  top: 0;
 }
 
 .slides {
@@ -572,6 +575,9 @@ form {
   margin: auto;
   display: flex;
   justify-content: space-between;
+  align-items: start;
+  line-height: 1.5;
+  gap: 2rem;
 }
 
 .links2 {
@@ -582,4 +588,41 @@ form {
     text-decoration-line: none;
     color: #000;
   }
+}
+.logo , .nav2, .office {
+    width: 25%;
+}
+.talk-me{
+    font-size: 1.5rem;
+}
+.send-msg{
+    input {
+        border: none;
+        padding: 1rem;
+    }
+    i{
+        color: blue;
+        font-size: 1.2rem;
+    }
+}
+
+.footer-end {
+    padding: 2rem;
+    background-color: blue;
+    color: #fff;
+}
+.copyright {
+    
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-social {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.media {
+    display: flex;
+    gap: 2rem;
 }
