--- a/design/responsive.css
+++ b/design/responsive.css
@@ -70,6 +70,59 @@
 }
 
 @media screen and (max-width: 900px) {
+    .links {
+        flex-direction: column;
+        width: 100%;        
+        height: auto;
+        position: absolute;
+        z-index: 10;
+        background: linear-gradient(to bottom, blue, #fff);
+        transition: 0.5s ease-in-out;
+        top: -500px;
+        right: 0;
+        padding: 20px 0;
+    }   
+    .links li {
+        padding: 10px 0;        
+        a {
+            font-weight: 700;
+            font-size: 1.3rem;
+        }        
+    }
+    .nav {
+        display: flex;
+        align-items: center;
+        justify-content: right;
+        flex-direction: row-reverse;
+    }            
+    .open-sidebar, .close-sidebar {
+        color: #000;
+        padding: 10px;
+        font-size: 2rem;
+        display: block;
+    }
+    #active-sidebar:checked ~ .links {
+        top: 4rem;
+    }
+    #active-sidebar:checked ~ #overlay {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 9;
+        display: block;
+    }
+    .close-sidebar {
+        display: none;
+    }
+    #active-sidebar:checked ~ .open-sidebar {
+        display: none;
+    }
+    #active-sidebar:checked ~ .close-sidebar {
+        display: block;
+    }
+    
     .slide {
         min-width: 100%;
         height: 60dvh;
@@ -103,6 +156,9 @@
     }
     .service-head, .service-about {
         width: 100%;
+    }
+    .services {
+        flex-direction: column;
     }
     .achiv-head {
         align-items: flex-start;
@@ -158,5 +214,29 @@
     }
     .staff-intro, .intro {
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 550px ) {
+    section {
+        margin-block: 2rem;
+    }
+    .about-exp {
+        flex-direction: column;
+        gap: 2rem;
+        margin-top: 2rem;
+    }
+    .about-info {
+        width: 100%;
+    }
+    
+    .prog-exp {
+        align-items: start;
+        gap: 2rem;
+        margin-top: 2rem;
+        flex-direction: column;
+    }
+    .mobile {
+        padding: 0.5rem 0;
     }
 }
