--- a/design/style.css
+++ b/design/style.css
@@ -124,28 +124,6 @@ section {
   }
 }
 
-.navigation {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  transform: translateY(-50%);
-}
-
-.nav-btn {
-  background: rgba(0, 0, 0, 0.5);
-  color: white;
-  border: none;
-  padding: 15px;
-  cursor: pointer;
-  font-size: 24px;
-}
-
-.nav-btn:hover {
-  background: rgba(0, 0, 0, 0.8);
-}
-
 .slide-content {
   width: 100%;
   height: 100%;
@@ -171,19 +149,27 @@ section {
   line-height: 1.5;
   text-shadow: 0px 1px 10px black;
   padding-block: 2rem;
-  button {
-    padding: 0.75rem;
-    border-radius: 2rem;
-    margin-top: 2rem;
-    border: none;
-    font-size: 1.5rem;
-  }
+  
   p {
     font-size: 1.5rem;
   }
+  
+}
+
+.head-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  button {
+    padding: 0.75rem;
+    border-radius: 2rem;
+    margin-top: 0.5rem;
+    border: none;
+    font-size: 2rem;
+  }
   span {
     margin-left: 1rem;
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 }
 .social-link {
@@ -573,12 +559,12 @@ section {
   width: 100%;
 }
 .foot-content {
-  width: 90%;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  line-height: 1.5;
-  gap: 2rem;
+    width: 90%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    line-height: 1.5;
+    gap: 2rem;
 }
 
 .links2 {
@@ -590,9 +576,13 @@ section {
     color: #000;
   }
 }
-.logo , .nav2, .office {
-    width: 25%;
+.logo {
+    width: 10%;
 }
+.office {
+    width: 70%;
+}
+
 .talk-me{
     font-size: 1.5rem;
 }
@@ -614,14 +604,14 @@ section {
 }
 .copyright {    
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     line-height: 1.5;
     gap: 2rem;
 }
 
 .footer-social {
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
     align-items: center;
 }
 .media {
