--- a/design/responsive.css
+++ b/design/responsive.css
@@ -62,7 +62,7 @@
     }
     .slide img {
         width: 100%;
-        height: 60dvh;    
+        /* height: 60dvh;     */
     }
     .links a {
         padding: 0.5rem 1.2rem;
@@ -71,7 +71,7 @@
 
 @media screen and (max-width: 900px) {
     h1 {
-            font-size: 2rem;
+            font-size: 1.8rem;
     }
     .links {
         flex-direction: column;
@@ -126,10 +126,6 @@
         display: block;
     }
     
-    .slide {
-        min-width: 100%;
-        height: 60dvh;
-    }
     .slide-content {
         height: auto;
     }
@@ -140,7 +136,7 @@
         justify-content: start;
         gap: 0;
         p{
-            font-size: 1rem;
+            font-size: 0.9rem;
         }
     }
     .head-btn {
@@ -242,14 +238,40 @@
     }
 }
 
-@media screen and (max-width: 550px ) {
+@media screen and (max-width: 600px ) {
+    h2 {
+         font-size: 1.5rem;
+    }
+    h4 {
+        font-size: 1rem;
+    }
+    h5 {
+        font-size: 0.9rem;
+    }
+    h6{
+        font-size: 0.9rem;
+    }
+    p {
+        font-size: 0.9rem;
+    }
     section {
         margin-block: 2rem;
+    }
+    .mobile {
+        padding: 4px 3px;
+        font-size: 0.8rem;
     }
     .slider-head {
         width: 100%;
         flex-direction: column;
         left: 0;
+    }
+
+    .m-view {
+        display: block;
+    }
+    .d-view {
+        display: none;
     }
     .social-link {
         transform: rotate(0deg);
@@ -260,19 +282,16 @@
     .fb {
         color: #fff;
     }
-    .slide {
-        height: 50dvh;
-    }
 
     .heading {
         h1 {
             font-size: 1.5rem;
         }
         p {
-            font-size: 0.8rem;
+            font-size: 0.7rem;
         }
         button, span {
-            font-size: 0.8rem;
+            font-size: 0.7rem;
         }
     }
     .about-exp {
@@ -290,7 +309,32 @@
         margin-top: 2rem;
         flex-direction: column;
     }
-    .mobile {
-        padding: 0.5rem 0;
+    .trand span {
+        font-size: 1.5rem;
+    }
+    .achiv-dbtn {
+        padding: 0.7rem 1rem;
+        font-size: 1rem;
+    }
+    .client-review span {
+        font-size: 2rem;        
+    }
+    .client-count span {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .user-detail button {
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+    }
+    
+    .copyright-logo p {
+        font-size: 0.8rem;
+    }
+    .media {
+        display: flex;
+        gap: 1rem;
     }
 }
