Refactor CSS and JavaScript files for improved organization and maintainability

--- a/design/responsive.css
+++ b/design/responsive.css
@@ -67,6 +67,9 @@
     .links a {
         padding: 0.5rem 1.2rem;
     }
+    .member {
+        flex: 0 0 35%;
+    }
 }
 
 @media screen and (max-width: 900px) {
@@ -279,10 +282,6 @@
         font-size: 1.4rem;
         gap: 0;
     }
-    .fb {
-        color: #fff;
-    }
-
     .heading {
         h1 {
             font-size: 1.5rem;
@@ -322,6 +321,9 @@
     .client-count span {
         font-size: 1.5rem;
     }
+    .member {
+        flex: 0 0 40%;
+    }
 }
 
 @media screen and (max-width: 400px) {
@@ -337,4 +339,5 @@
         display: flex;
         gap: 1rem;
     }
+
 }
