--- a/design/style.css
+++ b/design/style.css
@@ -466,16 +466,25 @@ section {
 .staff-intro, .intro {
   width: 50%;
 }
-
+.team-members {
+  overflow: hidden;
+}
 .members {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 1rem;
   margin-block: 3rem;
+  transition: transform 0.3s ease-in-out;
 }
 .member {
-  width: 23%;
+  flex: 0 0 25%;
+  padding: 1rem;
+  text-align: center;
+  background-color: #f0f0f0;
+  border: 1px solid blue;
+  border-radius: 1rem;  
 }
 .name-role {
   margin-block: 1rem;
